Fix dropdown z-index in protocol templates [SCI-8347] (#5527)

--- a/app/assets/stylesheets/protocols/protocol.scss
+++ b/app/assets/stylesheets/protocols/protocol.scss
@@ -31,6 +31,10 @@
     padding: 10px 10px 10px 26px;
   }
 
+  .dropdown-menu {
+    z-index: 9;
+  }
+
   .protocol-section {
     margin: 16px 0 16px -20px;
 
